[gd_scene load_steps=9 format=3 uid="uid://cxmm3spc1j8ci"]

[ext_resource type="Script" path="res://Scripts/auth.gd" id="1_qitch"]
[ext_resource type="Shader" path="res://main.gdshader" id="1_xxlyy"]
[ext_resource type="Texture2D" uid="uid://bl5gboifdd3xr" path="res://bgm2.png" id="2_epda2"]
[ext_resource type="FontFile" uid="uid://du26a2te3yqen" path="res://fonts/Exo_2/static/Exo2-Black.ttf" id="3_bs41a"]
[ext_resource type="Texture2D" uid="uid://bqw8hqwnrdvt8" path="res://logobp.png" id="3_mnk28"]
[ext_resource type="FontFile" uid="uid://pt1666tmlkwu" path="res://fonts/Exo_2/Exo2-VariableFont_wght.ttf" id="5_38eh2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ivrlr"]
shader = ExtResource("1_xxlyy")
shader_parameter/direction = Vector2(1, 1)
shader_parameter/speed_scale = 0.05

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6u6u"]
bg_color = Color(0.164706, 0.513726, 0.439216, 0.396078)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Inicio de sesion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qitch")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.733333, 0.631373, 1)

[node name="TextureRect" type="TextureRect" parent="bg"]
material = SubResource("ShaderMaterial_ivrlr")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_epda2")
stretch_mode = 1

[node name="Logo" type="TextureRect" parent="bg/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -321.5
offset_right = 121.5
offset_bottom = -78.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mnk28")
expand_mode = 1

[node name="Panel" type="Panel" parent="bg/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -166.0
offset_top = 225.0
offset_right = 166.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h6u6u")

[node name="Label" type="Label" parent="bg/TextureRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.5
offset_top = -44.0
offset_right = 152.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 21
theme_override_fonts/font = ExtResource("3_bs41a")
theme_override_font_sizes/font_size = 70
text = "BUFFPAL"

[node name="Panel2" type="Panel" parent="bg/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -236.0
offset_top = 609.0
offset_right = 231.0
offset_bottom = 907.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h6u6u")

[node name="Email" type="Label" parent="bg/TextureRect/Panel2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.0
offset_top = 6.0
offset_right = 61.0
offset_bottom = 56.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_bs41a")
theme_override_font_sizes/font_size = 39
text = "CORREO"

[node name="LineEdit" type="LineEdit" parent="bg/TextureRect/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.5
offset_top = -83.0
offset_right = 221.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_38eh2")
theme_override_font_sizes/font_size = 22

[node name="Password" type="Label" parent="bg/TextureRect/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = -7.0
offset_right = 109.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_bs41a")
theme_override_font_sizes/font_size = 39
text = "CONTRASEÑA"

[node name="LineEdit2" type="LineEdit" parent="bg/TextureRect/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.5
offset_top = 53.0
offset_right = 221.5
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_38eh2")
theme_override_font_sizes/font_size = 22

[node name="VolverButton" type="Button" parent="bg/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.172
anchor_bottom = 0.048
offset_right = 0.159996
offset_bottom = -0.440002
text = "Volver"

[node name="ColorRect" type="ColorRect" parent="bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = 306.0
offset_right = 121.0
offset_bottom = 368.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0.666667, 0.560784, 1)

[node name="Button" type="Button" parent="bg/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -35.5
offset_right = 124.0
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_bs41a")
theme_override_font_sizes/font_size = 30
text = "INICIO SESIÓN"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="bg/TextureRect/VolverButton" to="." method="_on_volver_button_pressed"]
[connection signal="pressed" from="bg/ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
